IPC Support on Mac and Linux
This ports the initial IPC support from @narenratan submitted
in #1 into the main branch making a few changes

1. Supports windows (by having an IPC_SUPPORT=1/0 option at build time)
2. Does an error check and logs it at least when doing shmem
3. Changes the setup of the shmem from static time to register
   time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_library(MTS SHARED src/mts-dylib-reference.cpp)
 
+if (UNIX OR APPLE)
+    target_compile_definitions(MTS PRIVATE IPC_SUPPORT=1)
+endif()
+
