Improved IPC support
This improves IPC support in a number of ways

1. Correctly uses ftok arguments to get a valid shmid
   by using the dll name as the path.
2. Detatches from memory when done
3. If you are the last person to detach from memory, also
   frees the shared memory segment
4. Adds a couple of basic tests, still not runnign in CI or
   anything, with a modified MTS client/master library to
   allow you to customize the path to your middleware lib
   for testing
5. Handle tuningInitialized and the rest of the inti path
   in the IPC case properly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,7 @@ add_library(MTS SHARED src/mts-dylib-reference.cpp)
 
 if (UNIX OR APPLE)
     target_compile_definitions(MTS PRIVATE IPC_SUPPORT=1)
+    target_link_libraries(MTS PRIVATE dl)
 endif()
 
+add_subdirectory(test)
