Change the disconnect logic a bit and fix a deregister bug
Deregister needed to connect. That made me realize I don't need
the connections in this process I just need a hard process guard
and a separate check for all-done.

--- a/.github/workflows/build-lib.yml
+++ b/.github/workflows/build-lib.yml
@@ -69,5 +69,6 @@ jobs:
           ./build/${{ matrix.testexe }} --null
           ./build/${{ matrix.testexe }} --clientTest
           ./build/${{ matrix.testexe }} --masterTest
+          ./build/${{ matrix.testexe }} --masterTwice
           # MTS_REFERENCE_DEACTIVATE_IPC=1 ./build/${{ matrix.testexe }}
 
