--- a/.github/workflows/build-lib.yml
+++ b/.github/workflows/build-lib.yml
@@ -73,6 +73,7 @@ jobs:
           ./build/${{ matrix.testexe }} --clientTest
           ./build/${{ matrix.testexe }} --masterTest
           ./build/${{ matrix.testexe }} --masterTwice
+          ./build/${{ matrix.testexe }} --invalidCallSequence
           # MTS_REFERENCE_DEACTIVATE_IPC=1 ./build/${{ matrix.testexe }}
           
       - name: Run IPC Test
