--- a/.github/workflows/build-lib.yml
+++ b/.github/workflows/build-lib.yml
@@ -23,16 +23,19 @@ jobs:
             dylib: Release/MTS.dll
             dylibvar: \\build\\Release\\MTS.dll
             testexe: test/Release/test-dylib.exe
+            testexe_master: test/Release/test-dylib-masteronly.exe
             runipc: false
           - os: macos-latest
             dylib: libMTS.dylib
             dylibvar: /build/libMTS.dylib
             testexe: test/test-dylib
+            testexe_master: test/test-dylib-masteronly
             runipc: true
           - os: ubuntu-latest
             dylib: libMTS.so
             dylibvar: /build/libMTS.so
             testexe: test/test-dylib
+            testexe_master: test/test-dylib-masteronly
             runipc: true
 
     steps:
@@ -71,11 +74,20 @@ jobs:
           
           ./build/${{ matrix.testexe }} --null
           ./build/${{ matrix.testexe }} --clientTest
-          ./build/${{ matrix.testexe }} --masterTest
-          ./build/${{ matrix.testexe }} --masterTwice
           ./build/${{ matrix.testexe }} --invalidCallSequence
-          # MTS_REFERENCE_DEACTIVATE_IPC=1 ./build/${{ matrix.testexe }}
+
+      - name: Run Master Only Tests
+        run: |
+          set -e
           
+          export MTS_LIB_LOCATION=${GITHUB_WORKSPACE}${{ matrix.dylibvar }}
+          echo $MTS_LIB_LOCATION
+          
+          ./build/${{ matrix.testexe_master }} --masterTest
+          ./build/${{ matrix.testexe_master }} --masterTestCan
+          ./build/${{ matrix.testexe_master }} --masterTwice
+          ./build/${{ matrix.testexe_master }} --invalidCallSequence
+
       - name: Run IPC Test
         if: ${{ matrix.runipc }}
         run: |
